# compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build  meson.options  test.txt  test2.txt
.github/workflows/: cmake-build.yml  codeql.yml
src/: CMakeLists.txt  main.c  meson.build
src/ast/: ast.h  ast_debug_print.c  ast_debug_print.h
src/compiler/: compiler_core.c  compiler_core.h  compiler_utils.c  compiler_utils.h  instructions.c  instructions.h  node_compiler.c  node_compiler.h  scope.c  scope.h  symbol_table.c  symbol_table.h
src/datastructures/: arraylist.c  arraylist.h  conversions.c  conversions.h  hashmap.c  hashmap.h  linked_list.c  linked_list.h  stack.c  stack.h
src/evaluator/: evaluator.c  evaluator.h
src/lexer/: lexer.c  lexer.h
src/logging/: log.c  log.h
src/object/: builtins.c  builtins.h  environment.c  environment.h  object.c  object.h  opcode.c  opcode.h
src/opcode/: opcode.c  opcode.h
src/parser/: parser.c  parser.h  parser_tracing.c  parser_tracing.h
src/repl/: repl.c  repl.h
src/token/: token.c  token.h
src/vm/: frame.c  frame.h  virtual_machine.c  virtual_machine.h
test/: CMakeLists.txt  all_tests.c  arraylist_tests.c  compiler_tests.c  evaluator_tests.c  hash_table_tests.c  lexer_tests.c  linked_list_tests.c  meson.build  object_test_utils.c  object_test_utils.h  object_tests.c  opcode_tests.c  parser_tests.c  repl_tests.c  symbol_table_tests.c  test_utils.h  vm_tests.c
