add_project_arguments('-DDEBUG', language : 'c')

executable('compiler', [
               'main.c',
               'logging/log.c',
               'token/token.c',
               'datastructures/hashmap.c',
               'lexer/lexer.c',
               'ast/ast_debug_print.c',
               'datastructures/arraylist.c',
               'object/environment.c',
               'object/object.c',
               'opcode/opcode.c',
               'parser/parser.c',
               'datastructures/stack.c',
               'compiler/symbol_table.c',
               'evaluator/evaluator.c',
               'object/builtins.c',
               'datastructures/linked_list.c',
               'datastructures/conversions.c',
               'repl/repl.c',
               'vm/virtual_machine.c',
               'vm/frame.c',
               'compiler/instructions.c',
               'compiler/scope.c',
               'compiler/node_compiler.c',
               'compiler/compiler_utils.c',
               'compiler/compiler_core.c',
           ],
           install : true,
           install_dir : bindir,
)
